MPP-2976 - fix layout issues on mobile

--- a/frontend/src/components/dashboard/SubdomainPicker.module.scss
+++ b/frontend/src/components/dashboard/SubdomainPicker.module.scss
@@ -84,7 +84,7 @@
     width: 100%;
 
     .input-wrapper {
-      width: calc($content-xs + $layout-sm);
+      width: 100%;
 
       @media screen and #{$mq-md} {
         max-width: $content-sm;
